# do-custom-kernels-matter

./: README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
docs/: compiler_vs_handwritten_kernels.md  survey.md
results/: genre_survey.json  qwen35_ablation_a100.json  qwen35_ablation_h100.json  qwen35_decode_a100.json  qwen35_decode_h100.json  qwen3_tts_a100_max_autotune.json  qwen3_tts_a100_reduce.json  qwen3_tts_h100_max_autotune.json  qwen3_tts_h100_reduce.json
scripts/: plot_main_results.py
scripts/qwen35/: bench_decode.py  check_correctness.py
scripts/qwen3_tts/: bench_e2e.py
scripts/slurm/: submit_all.sh
src/kernelcheck/: __init__.py  compiled_qwen3_tts.py
src/qwen35_triton/: __init__.py  config.py  graph.py  patch.py
src/qwen35_triton/kernels/: __init__.py  mlp.py  qknorm_rope.py  rmsnorm.py  rmsnorm_gated.py  utils.py
